Добавляет реализацию фильтров

--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,13 @@ fieldset {
   padding: 4px;
 }
 
-
+/*Ошибка загрузки фотографии*/
+.ad-form__photo--invalid {
+  width: 100%;
+  color: red;
+  font-size: 12px;
+  padding: 4px;
+}
 
 /* Футер
    ========================================================================== */
