Добавляет ошибку при загрузке изобразения некорректного формата

--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,11 @@ fieldset {
   border-radius: 4px;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .ad-form__element input:hover,
 .ad-form__element select:hover,
 .ad-form__element textarea:hover {
