Корректирует реализацию загрузки фотографий

--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,11 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+input[type='number'] {
+  appearance: none;
+  -moz-appearance: textfield;
+}
+
 .ad-form__element input:hover,
 .ad-form__element select:hover,
 .ad-form__element textarea:hover {
